--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
+    <h2 id="title-page">Handcrafted, home-made masterpieces</h2>
     <div id="page">
-      <header id="header">
+      <header>
         <div class="loogo">
           <img
             id="header-img"
@@ -20,9 +20,11 @@
         </div>
     
         <nav id="nav-bar">
-            <a class="nav-link" href="#features">Features</a>
-            <a class="nav-link" href="#how-it-works">How It Works</a>
-            <a class="nav-link" href="#pricing">Pricing</a>
+          <ul>
+            <li><a class="nav-link" href="#features">Features</a></li>
+            <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+            <li><a class="nav-link" href="#pricing">Pricing</a></li>
+          </ul>
         </nav>
       </header>
     
@@ -84,6 +86,7 @@
             src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
             frameborder="0"
             allowfullscreen
+            controls
           ></iframe>
         </section>
         <section id="pricing">
